feat: Complete EventForm implementation and navigation system - Added EventForm component for lifecycle events, Navigation component, CreateEventPage, BatchListPage placeholder, enhanced TracePage with Add Event button, URL query parameter support, comprehensive test scripts, and reverted to core traceability features

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "express": "^5.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0"
   },
